// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Select with many options 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <label
    className="label"
    htmlFor="123e4567-e89b-12d3-a456-426655440003"
  >
     
  </label>
  <select
    className="formField"
    id="123e4567-e89b-12d3-a456-426655440003"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
    <option>
      Bar
    </option>
    <option>
      Baz
    </option>
    <option>
      Quux
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders a Select with no options 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <label
    className="label"
    htmlFor="123e4567-e89b-12d3-a456-426655440001"
  >
     
  </label>
  <select
    className="formField"
    id="123e4567-e89b-12d3-a456-426655440001"
    onChange={[Function]}
  />
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders a Select with one option 1`] = `
<div
  className="wrapper"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <label
    className="label"
    htmlFor="123e4567-e89b-12d3-a456-426655440002"
  >
     
  </label>
  <select
    className="formField"
    id="123e4567-e89b-12d3-a456-426655440002"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly as large 1`] = `
<div
  className="wrapper large"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <label
    className="label"
    htmlFor="123e4567-e89b-12d3-a456-426655440005"
  >
     
  </label>
  <select
    className="formField"
    id="123e4567-e89b-12d3-a456-426655440005"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly as small 1`] = `
<div
  className="wrapper small"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <label
    className="label"
    htmlFor="123e4567-e89b-12d3-a456-426655440004"
  >
     
  </label>
  <select
    className="formField"
    id="123e4567-e89b-12d3-a456-426655440004"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly when disabled 1`] = `
<div
  className="wrapper disabled"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <label
    className="label"
    htmlFor="123e4567-e89b-12d3-a456-426655440006"
  >
     
  </label>
  <select
    className="formField"
    disabled={true}
    id="123e4567-e89b-12d3-a456-426655440006"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;

exports[`renders correctly when invalid 1`] = `
<div
  className="wrapper invalid"
  style={
    Object {
      "--formField-maxLength": undefined,
    }
  }
>
  <label
    className="label"
    htmlFor="123e4567-e89b-12d3-a456-426655440007"
  >
     
  </label>
  <select
    className="formField"
    id="123e4567-e89b-12d3-a456-426655440007"
    onChange={[Function]}
  >
    <option>
      Foo
    </option>
  </select>
  <span
    className="icon"
  >
    <div
      className="icon arrowDown base"
    />
  </span>
</div>
`;
